# spec-lsdl

./: .gitignore  DATA_SOURCES.md  README.md  implementors-checklist.md  lsdl-primer.md  lsdl-spec.md  pyproject.toml
.beads/: metadata.json
docs/: anchor-placement-guide.md  element-geometry.md  script-notes.md
lib/: basic-latin.lsdl  cyrillic.lsdl  diacritics.lsdl  elements-base.lsdl  greek.lsdl  latin-extended.lsdl  ligatures.lsdl
lsdl/: __init__.py  evaluator.py  model.py  parser.py  parser.py.bak  validate.py
lsdl/cli/: __init__.py  dump.py  render.py  validate.py
test-vectors/invalid/semantic/: semantic-001-undefined-element.error  semantic-001-undefined-element.lsdl  semantic-002-cyclic-reference.error  semantic-002-cyclic-reference.lsdl  semantic-003-coordinate-out-of-range.error  semantic-003-coordinate-out-of-range.lsdl  semantic-004-tparam-out-of-range.error  semantic-004-tparam-out-of-range.lsdl  semantic-005-duplicate-case.error  semantic-005-duplicate-case.lsdl  semantic-006-undefined-case-char.error  semantic-006-undefined-case-char.lsdl  semantic-007-wrong-arg-count.error  semantic-007-wrong-arg-count.lsdl  semantic-008-lig-wrong-args.error  semantic-008-lig-wrong-args.lsdl
test-vectors/invalid/syntax/: syntax-001-missing-equals.error  syntax-001-missing-equals.lsdl  syntax-002-unclosed-paren.error  syntax-002-unclosed-paren.lsdl  (+6 more)
test-vectors/valid/: basic-latin.lsdl  block-form.lsdl  complete.lsdl  cyrillic.lsdl  diacritics.lsdl  greek.lsdl  ligatures.lsdl  minimal.lsdl  transforms.lsdl
tests/: __init__.py  conftest.py  test_lsdl.py
