[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdl"
version = "1.0.0"
description = "Latin Script Description Language - parser and tools"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.9"
authors = [
    {name = "Mark Atwood", email = "me@mark.atwood.name"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
render = ["svgwrite"]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.scripts]
lsdl-validate = "lsdl.cli.validate:main"
lsdl-dump = "lsdl.cli.dump:main"
lsdl-render = "lsdl.cli.render:main"

[project.urls]
Homepage = "https://github.com/markatwood/lsdl"

[tool.setuptools.packages.find]
where = ["."]
include = ["lsdl*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
